force-app/main/default/objects/Student_File_Status__c/Student_File_Status__c.object-meta.xml
<CustomObject>
    <label>Student File Status</label>
    <nameField>
        <displayFormat>File Status - {0000}</displayFormat>
        <label>Student File Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student File Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>