force-app/main/default/objects/Student_File_Status__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Student File Status</relationshipLabel>
    <relationshipName>Student_File_Status</relationshipName>
    <type>Lookup</type>
</CustomField>