force-app/main/default/objects/Student_File_Status__c/fields/Course_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrolled__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrolled</label>
    <referenceTo>Course_Enrolled__c</referenceTo>
    <relationshipLabel>Student File Status</relationshipLabel>
    <relationshipName>Student_File_Status</relationshipName>
    <type>Lookup</type>
</CustomField>