force-app/main/default/objects/Student_File_Status__c/fields/File_Ext__c.field-meta.xml
<CustomField>
    <fullName>File_Ext__c</fullName>
    <label>File Ext</label>
    <length>25</length>
    <type>Text</type>
</CustomField>