force-app/main/default/objects/Student_File_Status__c/fields/File_Path__c.field-meta.xml
<CustomField>
    <fullName>File_Path__c</fullName>
    <label>File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>