force-app/main/default/objects/Student_File_Status__c/fields/File_UUID__c.field-meta.xml
<CustomField>
    <fullName>File_UUID__c</fullName>
    <externalId>true</externalId>
    <label>File UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>