force-app/main/default/objects/Student_File_Status__c/fields/GP_Folder__c.field-meta.xml
<CustomField>
    <fullName>GP_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP Folder</label>
    <referenceTo>GP_Folder__c</referenceTo>
    <relationshipLabel>Student File Status</relationshipLabel>
    <relationshipName>Student_File_Status</relationshipName>
    <type>Lookup</type>
</CustomField>