force-app/main/default/objects/Student_File_Status__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Student File Status</relationshipLabel>
    <relationshipName>Student_File_Status</relationshipName>
    <type>Lookup</type>
</CustomField>