force-app/main/default/objects/Student_File_Status__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>stages</valueSetName>
    </valueSet>
</CustomField>