force-app/main/default/objects/Student_File_Status__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student File Status</relationshipLabel>
    <relationshipName>Student_File_Status</relationshipName>
    <type>Lookup</type>
</CustomField>